--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,17 +4,15 @@
   }
 
 .navbar {
-    width: 200px;
+    width: 16%;
     height: 605px;
     background: #4834D4;
-    position: fixed;
-    right: 0;
-    top: 10px;
     border-radius: 10px 0 0 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    margin-left: 10px;
 }
 .adminBox {
     width: 100%;
@@ -98,4 +96,58 @@
 } 
 .activeTab a svg path { 
     fill:#535C68 ;
+}
+/**Responsive Styles **/
+@media (max-width:1200px) {
+    
+}
+@media (max-width:992px) { 
+    .navbar { 
+        width: 24%;
+    }
+}
+@media (max-width:768px) { 
+    .navbar { 
+        width: 27%;
+    }
+    .adminBox img { 
+        width: 60px;
+        height: 60px;
+    }
+}
+@media (max-width:576px) { 
+    .navbar {
+        width: 30%; 
+    }
+}
+@media (max-width:460px) {
+    .navbar {
+        width: 33%;
+    }
+    .adminBox  h2{ 
+        font-size: 8px;
+    }
+    .adminBox  img{ 
+        width: 50px;
+        height: 50px;
+    }
+    .navbarMenu ul .liTab { 
+        height: 27px;
+        border-radius: 0 7px 7px 0;
+    }
+    .navbarMenu ul li a { 
+        font-size: 8px;
+    }
+    .navbarMenu ul li a svg { 
+        width: 13.5px;
+    }
+    .activeTab {
+        padding-right: 12px !important;
+    }
+  
+}
+@media (max-width:400px) { 
+    .navbar {
+        width: 41%;
+    }
 }
