--- a/src/components/Resumeh.module.css
+++ b/src/components/Resumeh.module.css
@@ -1,16 +1,15 @@
 .resumeh {
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    align-items: flex-start;
+    justify-content:space-between;
     padding-top: 10px;
-    padding-left: 110px;
+    padding-left: 15px;
 }
 .bodyPageContainer {
-    width: 1048px;
+    width: 82%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-left: -18px;
   
 }
 .bodyPageContainer .header {
@@ -85,7 +84,7 @@
 .content .row1 h4{
     color:#e42424;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 17px;
     
 }
 .content .row1 h6{
@@ -95,7 +94,7 @@
 
 }
 .content .row1 .row1Column2   {
-    width: 50%;
+    width: 53%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -104,22 +103,27 @@
 .content .row1 .row1Column2 span  {
     font-weight: 400;
     margin: 3px 0;
+    font-size: 14px;
 }
-.content .row2 , .content .row3 , .content .row4 {
+.content .row2 , 
+.content .row3 , 
+.content .row4 {
     width: 100%;
-    margin-top: 40px;
+    margin-top: 12px;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     justify-content: center;
     
 }
 
-.content .row2 h2 ,.content .row3 h2 , .content .row4 h2 {
+.content .row2 h2 ,
+.content .row3 h2 , 
+.content .row4 h2 {
     color: #e42424;
     text-align: center;
     border-bottom: 2px solid #e42424;
     width: 96%;
+    font-size: 18px;
 }
 .content .row2 span {
     margin-top: 10px;
@@ -143,8 +147,116 @@
 .content .row4 ul li { 
     height: 30px;
     font-weight: bold;
-    width: 50%;
+    width: 100%;
 }
 .content .row4 ul li a { 
-    margin-left: 20px;
+
+}
+/**Responsive Styles **/
+
+@media (max-width:1200px) {
+    
+}
+@media (max-width:992px) { 
+    .bodyPageContainer {
+        width: 75%;
+    }
+}
+@media (max-width:768px) { 
+    .bodyPageContainer .header {
+        height: 35px;
+    }
+    .bodyPageContainer .header h2 {
+        font-size: 14px;
+    }
+}
+@media (max-width:576px) { 
+    .bodyPageContainer {
+        width: 68%;
+    }
+    .content .row1 h4{ 
+        font-size: 14px;
+    }
+    .content .row1 h6{ 
+        font-size: 11px;
+        margin-top: 5px;
+    }
+    .content .row1 .row1Column2 span , 
+    .content .row1 .row1Column2 a , 
+    .content .row2 span , 
+    .content .row3 ul li,
+    .content .row4 ul li { 
+        font-size: 10px;
+    }
+    .content .row2 , 
+    .content .row3 , 
+    .content .row4 { 
+        margin-top: 5px;
+    }
+    .content .row1 h4{ 
+        font-size: 10px;
+    }
+    .content .row1 h6{ 
+        font-size: 10px;
+        margin-top: 3px;
+    }
+
+}
+@media (max-width:460px) {
+    .bodyPageContainer {
+        width: 65%;
+
+    }
+    .bodyPageContainer .header { 
+        height: 30px;
+        border-radius: 6px;
+    }
+    .bodyPageContainer .header h2 {
+        font-size: 12px;
+        margin-right: 3px;
+    }
+    .content {
+        margin-top: 0px;
+    }
+    .content .row1 {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .content .row1 .row1Column2 {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        margin-top: 14px;
+    }
+    .content .row2 h2 ,
+    .content .row3 h2 , 
+    .content .row4 h2 { 
+        font-size: 12px;
+    }
+    .content .row3 ul {
+        flex-direction: column;
+    }
+    .content .row3 ul li { 
+        width: 100%;
+    }
+
+    .content .row4 ul { 
+        padding: 3px;
+    } 
+    .content .row1 .row1Column2 span , 
+    .content .row1 .row1Column2 a , 
+    .content .row2 span , 
+    .content .row3 ul li,
+    .content .row4 ul li { 
+        font-size: 9px;
+    }
+}
+@media (max-width:400px) { 
+    .bodyPageContainer {
+        width: 57%;
+    }
 }
